test/conformance/chainsaw/generate/foreach/existing/cpol-data-sync-create/1-1-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: zk-kafka-address-foreach-cpol-data-sync-create
spec:
  rules:
  - match:
      any:
      - resources:
          kinds:
          - ConfigMap
    name: k-kafka-address
    context:
    - name: configmapns
      variable:
        jmesPath: request.object.metadata.namespace
    preconditions:
      any:
      - key: '{{configmapns}}'
        operator: Equals
        value: 'default'
    generate:
      generateExisting: true
      synchronize: true
      foreach:
        - list: request.object.data.namespaces | split(@, ',')
          context:
          - name: ns
            variable:
              jmesPath: element
          preconditions:
            any:
            - key: '{{ ns }}'
              operator: AnyIn
              value:
              - foreach-ns-1
          apiVersion: networking.k8s.io/v1
          kind: NetworkPolicy
          name: my-networkpolicy-{{ elementIndex }}-{{ ns }}
          namespace: '{{ ns }}'
          data:
            metadata:
              labels:
                request.namespace: '{{ request.object.metadata.name }}'
                element.namespace: '{{ ns }}'
                element.name: '{{ element }}'
                elementIndex: '{{ elementIndex }}'
            spec:
              podSelector: {}
              policyTypes:
              - Ingress
              - Egress
