test/conformance/chainsaw/generate/foreach/existing/cpol-data-sync-create/2-2-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-networkpolicy-0-foreach-ns-1
  namespace: foreach-ns-1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
