test/conformance/chainsaw/generate/foreach/existing/cpol-data-sync-create/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: cpol-data-sync-create
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: 1-0-existing.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: 1-1-policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: zk-kafka-address-foreach-cpol-data-sync-create
  - name: step-02
    try:
    - assert:
        file: 2-2-netpol.yaml
    - error:
        file: 2-3-netpol.yaml
